- Fix problem with query and record expiry.
- todo: create async job to reindex all output

AdminSearch v1.0.1
- Fixes problem with use of 'Use Admin Search' permission.

ModuleManager
- Now detect if module_custom directories exist and are populated and warn about this before upgrading a module.
- Minor string changes.
- Improvements to error handling in the new versions tab.

Version 2.1.3 - Black Point
----------------------------------
Core - General
  - Security fix to prevent HTTP_HOST attacks. Many thanks to I-TRACING (www.i-tracing.com) for reporting it!!
  - Remove stub .htaccess files from subdirectories
  - Update the included sample htaccess.txt file for security
  - Fix for endless loop when calculating a page alias in utf-8 environments
  - Fix for endless loop when calculating a page alias and a page name/title ended with -
  - Fixes a notice on the login page
  - Optimize LoadContentFromId() to be typesafe, and use default page, if the id passed in is invalid
  - Fix error condition if there were no default default design, or default page template
  - Fix problem with system verification.

  - #10825 - Admin-account settings don't remember startpage if you set one
  - #10874 - When creating a page and the title has specific characters, CMSMS stops responding
  - #10910 - content and content_module order incorrect Admin page
  - #10911 - 'Use Admin Search' permission not being used in 2.1.2
  - #10921 - Content Field to Display in Name Column not used

AdminSearch v1.0.1
  - Minor fix to permissions checks.

Navigator v1.0.3
  - Improved exception handling on install

News v2.50.5
  - Fix error condition if no results were returned

Installation Assistant v1.0.3.1
  - Tweaks to README files
  - Improved error handling in some circumstances
<<<<<<< .working

=======
  - Fix some PHP7 issues.

>>>>>>> .merge-right.r10552
FileManager
  - #10871 - Filemanager moving folder

Version 2.1.2 - Andros Town
----------------------------------
Core - General